force-app/main/default/objects/Opportunity/fields/Create_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Create_Renewal__c</fullName>
    <label>Create Renewal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>