force-app/main/default/objects/Opportunity/fields/Halo_Contract__c.field-meta.xml
<CustomField>
    <fullName>Halo_Contract__c</fullName>
    <label>Halo Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>