force-app/main/default/objects/Opportunity/fields/Total_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Percent__c</fullName>
    <formula>IF(Amount &gt; 0, (Amount - Total_Cost__c) / Amount, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>