force-app/main/default/objects/Opportunity/recordTypes/Quick_Quote.recordType-meta.xml
<RecordType>
    <fullName>Quick_Quote</fullName>
    <active>true</active>
    <businessProcess>Quick Quote</businessProcess>
    <description>For Lightweight Transactional Sales</description>
    <label>Quick Quote</label>
</RecordType>