force-app/main/default/objects/Opportunity/validationRules/Renewal_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(StageName) = &quot;Closed Won&quot;,
  ISBLANK(TEXT(Create_Renewal__c))
)</errorConditionFormula>
    <errorDisplayField>Create_Renewal__c</errorDisplayField>
    <errorMessage>Please confirm whether Renewal Opportunity should be created</errorMessage>
</ValidationRule>