force-app/main/default/objects/Opportunity/validationRules/Renewal_Opp_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Opp_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Create_Renewal__c ,&quot;Yes&quot;), ISNULL(Renewal_Date__c))</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Set a value for the Renewal Date if setting &apos;Create Renewal&apos; to &apos;Yes&apos;</errorMessage>
</ValidationRule>